<resources>
    <string name="app_name">Dose</string>
    <string name="app_logo">Dose</string>
    <string name="login_hint">Username</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="scan_button">Scan</string>
    <string name="meds_button">Medications</string>
    <string name="alarms_button">Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="take_picture">Take picture</string>
    <string name="no_meds">No medications to show.</string>
</resources>
