<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="damian.ah2017.HomeActivity">

    <Button
        android:id="@+id/sched_button"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonshape"
        android:text="@string/alarms_button"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/med_button"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonshape"
        android:text="@string/meds_button"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_button" />

    <Button
        android:id="@+id/scan_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/buttonshape"
        android:onClick="scanSignal"
        android:text="@string/scan_button"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>